<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="frag"
            type="com.lizarragabriel.myfirebase.ui.login.LogInFragment" />
        <variable
            name="model"
            type="com.lizarragabriel.myfirebase.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LogInFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutEmail="@{model.errorEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutt"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/mEmail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutPassword="@{model.errorPassword}"
            android:layout_width="match_parent"
            android:id="@+id/mPasswordLayout"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/mPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> frag.signIn()}"
                android:text="@string/sign_in"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.Button.TextButton"  />

            <Button
                android:id="@+id/mLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> model.loginButton(mEmail.getText().toString(), mPassword.getText().toString())}"
                android:text="@string/log_in" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_google32"
            android:paddingStart="16dp"
            android:drawablePadding="10dp"
            android:text="@string/login_google"
            android:textAlignment="textStart" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_facebook32"
            android:onClick="@{() -> frag.facebookLogin()}"
            android:layout_marginHorizontal="16dp"
            android:paddingStart="16dp"
            android:drawablePadding="10dp"
            android:text="@string/login_facebook"
            android:textAlignment="textStart" />

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/myProgress"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

    </LinearLayout>
</layout>