<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.lizarragabriel.myfirebase.ui.sign.SignViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.sign.SignInFragment">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/mToolbar"
            app:title="@string/sign_in"
            app:navigationIcon="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:textSize="50sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/mEmail" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/mPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                app:endIconMode="password_toggle"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/mCPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:onClick="@{() -> model.signButton(mEmail.getText().toString(), mPassword.getText().toString(), mCPassword.getText().toString())}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/sign_in"
                android:id="@+id/mAdd" />

            <ProgressBar
                android:layout_marginTop="5dp"
                android:visibility="@{model.loading ? View.VISIBLE : View.GONE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>
</layout>